# igraph_cattribute_bug_reprex

./: .gitignore  BICS_ABM.cpp  BICS_ABM.h  CMakeLists.txt  main.cpp  readme.md  routine.cpp
